# talk-debt

./: README.md  pyproject.toml
.github/workflows/: build-release.yml  codeql.yml  tests.yml
assets/: talk-debt.icns
src/talk_debt/: __init__.py  __main__.py  app.py  icon.py  paths.py  settings.py  stats.py  timer.py  tray.py  ui.py
tests/: test_settings_and_main.py  test_stats.py  test_timer.py
