[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talk-debt"
version = "0.1.0"
description = "Floating standup timer that counts into red debt."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["PySide6>=6.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
