[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talk-debt"
version = "0.2.0"
description = "Floating standup timer that counts into red debt."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["PySide6>=6.7"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "ruff>=0.4",
    "build>=1.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["talk_debt"]
omit = ["src/talk_debt/app.py", "src/talk_debt/tray.py", "src/talk_debt/ui.py"]

[tool.coverage.report]
fail_under = 60

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
